<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/gMain"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navWorkflow"
            android:icon="@drawable/ic_workflow"
            android:title="@string/nav_workflow" />
        <item
            android:id="@+id/navTask"
            android:icon="@drawable/ic_task"
            android:title="@string/nav_my_task" />
        <item
            android:id="@+id/navRecycleBin"
            android:icon="@drawable/ic_recycle_bin"
            android:title="@string/nav_recycle" />
    </group>

    <group android:id="@+id/gOther">
        <item
            android:id="@+id/navAbout"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about" />

    </group>


</menu>
